<resources>
    <string name="app_name">Create Account With Room Database</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_firstname">Firstname</string>
    <string name="enter_lastname">Lastname</string>
    <string name="enter_password">Password</string>
    <string name="enter_user_name">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="post">Post</string>
    <string name="what_do_you_want_to_talk_about">What do you want to talk about?</string>
    <string name="select_birth_date">Select Birth Date</string>
    <string name="ok">OK</string>
    <string name="profile">Profile</string>
    <string name="create_post">Create Post</string>
    <string name="log_in_as_admin">Log in as admin</string>
    <string name="edit_intro">Edit intro</string>
    <string name="headline">Headline</string>
    <string name="current_position">Current Position</string>
    <string name="position">Position</string>
    <string name="industry">Industry</string>
    <string name="add_new_position">+ Add new position</string>
    <string name="show_current_company_in_my_intro">Show current company in my intro</string>
    <string name="education">Education</string>
    <string name="show_education_in_my_intro">Show education in my intro</string>
    <string name="add_new_education">+ Add new education</string>
    <string name="use_current_location">Use current location</string>
    <string name="location">Location</string>
    <string name="country_region">Country/Region</string>
    <string name="city">City</string>
    <string name="contact_info">Contact info</string>
    <string name="add_or_edit_your_profile_url_email_and_more">Add or edit your profile URL, email, and more</string>
    <string name="edit_contact_info">Edit contact info</string>
    <string name="website">Website</string>
    <string name="add_a_link_that_will_appear_at_the_top_of_your_profile">Add a link that will appear at the top of your profile</string>
    <string name="link">Link</string>
    <string name="link_text">Link text</string>
    <string name="customize_how_your_link_will_appear_option">Customize how your link will appear (option)</string>
    <string name="save">Save</string>
</resources>